tests-trybuild/tests/riscv-rt/post_init/fail_arg_type.rs
#[riscv_rt::post_init]
fn before_main(_hart_id: String) {}

fn main() {}
